# IDNHRust

./: Cargo.toml  README.md  build.rs  project_meta.json
.github/workflows/: rust.yml
assets/: default_config.toml
assets/shaders/: canvas.frag  canvas_dots.frag  canvas_grid.frag  color_fragment_shader.frag  color_vertex_shader.vert  text_fragment_shader.frag  text_vertex_shader.vert  textured_fragment_shader.frag  textured_vertex_shader.vert
assets/shaders/effects/glow/: prox_fade.frag  prox_fade_red.frag  prox_fade_texture.frag  prox_fade_white_texture.frag
data/: settings.toml
src/: ES3.rs  app.rs  app_selector.rs  button.rs  camera.rs  canvas.rs  collider.rs  component.rs  component_system.rs  draw_context.rs  easing.rs  editor_app.rs  editor_tile.rs  es3.rs  es3_text_editor.rs  event_context.rs  game_app.rs  history_manager.rs  image.rs  keybinds.rs  language_server_protocol.rs  macros.rs  main.rs  monitor_info.rs  nine_slice.rs  object_tree.rs  platform.rs  rectangle.rs  semantics.rs  settings.rs  shaders.rs  shelf_tile.rs  storage_component.rs  surface.rs  text.rs  text_box.rs  text_input_handler.rs  texture_atlas.rs  toast_system.rs  visibility_toggle.rs  (+2 more)
src/widgets/: button.rs  widget.rs
