[package]
name = "IDNHRust"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.2.1"
gl = "0.14.0"
glob = "0.3.1"
rect_packer = "0.2.1"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
sdl2 = { version = "0.37.0", features = ["bundled", "image", "mixer", "ttf", "unsafe_textures"] }
