[package]
name = "IDNHRust"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
device_query = "2.1.0"
enigo = "0.2.1"
gl = "0.14.0"
glob = "0.3.1"
libp2p = "0.54.1"
rect_packer = "0.2.1"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
sdl2 = { version = "0.37.0", features = ["bundled", "image", "mixer", "unsafe_textures"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
serde_json = "1.0.128"
fancy-regex = "0.13.0"
clipboard = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "winuser", "minwindef"] }
widestring = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.20", features = ["xlib"] }
